Mark EditMode tests asmdef as test assembly

--- a/Assets/Tests/EditMode/Tests.EditMode.asmdef
+++ b/Assets/Tests/EditMode/Tests.EditMode.asmdef
@@ -13,5 +13,9 @@
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
-    "noEngineReferences": false
+    "noEngineReferences": false,
+    "testAssemblies": true,
+    "optionalUnityReferences": [
+        "TestAssemblies"
+    ]
 }
