Extract ScoreCalculator into Domain layer and isolate from Unity

--- a/Assets/Tests/EditMode/Tests.EditMode.asmdef
+++ b/Assets/Tests/EditMode/Tests.EditMode.asmdef
@@ -1,21 +1,21 @@
 {
-    "name": "Tests.EditMode",
-    "references": [
-        "Assembly-CSharp"
-    ],
-    "includePlatforms": [
-        "Editor"
-    ],
-    "excludePlatforms": [],
-    "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
-    "autoReferenced": true,
-    "defineConstraints": [],
-    "versionDefines": [],
-    "noEngineReferences": false,
-    "testAssemblies": true,
-    "optionalUnityReferences": [
-        "TestAssemblies"
-    ]
+  "name": "Tests.EditMode",
+  "references": [
+    "DDR.Domain.Runtime"
+  ],
+  "includePlatforms": [
+    "Editor"
+  ],
+  "excludePlatforms": [],
+  "allowUnsafeCode": false,
+  "overrideReferences": false,
+  "precompiledReferences": [],
+  "autoReferenced": true,
+  "defineConstraints": [],
+  "versionDefines": [],
+  "noEngineReferences": false,
+  "testAssemblies": true,
+  "optionalUnityReferences": [
+    "TestAssemblies"
+  ]
 }
